--- a/verceltest/package.json
+++ b/verceltest/package.json
@@ -24,4 +24,6 @@
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
-    "globals
+    "globals": "^15.14.0"
+  }
+}
